--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7 || ^8",
         "erusev/parsedown": "^1.7.4",
-        "symfony/yaml": "^5.0 || ^6.0"
+        "symfony/yaml": "^5.0 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
